k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satelite-control-deployment
  namespace: default
  labels:
    app: satelite-control-deployment
spec:
  replicas: 2 # number of pods
  selector:
    matchLabels:
      app: satelite-control-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: satelite-control-deployment
    spec:
      containers:
        - name: satelite-control-image
          image: IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
