k8s/mongoDeployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-standalone
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        selector: mongodb-standalone
    spec:
      containers:
      - name: mongodb-standalone
        image: mongo:4.0.8
        # env:
        #   - name: MONGO_INITDB_ROOT_USERNAME
        #     value: "admin"
        #   - name: MONGO_INITDB_ROOT_PASSWORD
        #     value: "Ishara123"
        #   - name: MONGO_INITDB_DATABASE
        #     value: satelite
      # nodeSelector:
      #   kubernetes.io/hostname: mongodb-node
