k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satelite-control-deployment-1
spec:
  selector:
    app: satelite-control-deployment-1
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
